--- a/Events.css
+++ b/Events.css
@@ -75,10 +75,10 @@ button:hover {
 
 /* Back button styles */
 .back-button {
-    position: fixed; /* Keeps it in the same spot when scrolling */
-    top: 20px; /* Distance from the top */
+    position: fixed; /* Change to fixed to keep it in the same spot when scrolling */
+    top: 41px; /* Distance from the top */
     left: 20px; /* Distance from the left */
-    background-color: #000000; /* Button color */
+    background-color: #444343; /* Button color */
     color: white; /* Text color */
     padding: 10px 15px; /* Button padding */
     border: none; /* No border */
@@ -90,9 +90,11 @@ button:hover {
 }
 
 .back-button:hover {
-    background-color: #0d0aa8; /* Darker color on hover */
+    background-color: #03274e; /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
+
+
 
 /* Modal styles */
 .modal {
@@ -156,7 +158,7 @@ button:hover {
 }
 
 .modal button {
-    background-color: #28a745; /* Green for success */
+    background-color: #21389e; /* Green for success */
     border: none;
     color: white;
     padding: 10px;
