--- a/AboutUs.css
+++ b/AboutUs.css
@@ -105,10 +105,10 @@ footer {
 
 /* Back button styles */
 .back-button {
-    position: absolute;
-    top: 20px; /* Adjust the position */
-    left: 20px; /* Adjust the position */
-    background-color: #03274e; /* Button color */
+    position: fixed; /* Change to fixed to keep it in the same spot when scrolling */
+    top: 41px; /* Distance from the top */
+    left: 20px; /* Distance from the left */
+    background-color: #444343; /* Button color */
     color: white; /* Text color */
     padding: 10px 15px; /* Button padding */
     border: none; /* No border */
@@ -123,3 +123,4 @@ footer {
     background-color: #03274e; /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
+
