--- a/SignUp.css
+++ b/SignUp.css
@@ -124,9 +124,9 @@ button:hover {
 /* Back button styles */
 .back-button {
     position: fixed; /* Change to fixed to keep it in the same spot when scrolling */
-    top: 20px; /* Distance from the top */
+    top: 41px; /* Distance from the top */
     left: 20px; /* Distance from the left */
-    background-color: #000000; /* Button color */
+    background-color: #444343; /* Button color */
     color: white; /* Text color */
     padding: 10px 15px; /* Button padding */
     border: none; /* No border */
@@ -138,6 +138,8 @@ button:hover {
 }
 
 .back-button:hover {
-    background-color: #0d0aa8; /* Darker green on hover */
+    background-color: #03274e; /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
+
+
