--- a/podcast.css
+++ b/podcast.css
@@ -160,10 +160,9 @@ button:hover {
 /* Back button styles */
 .back-button {
     position: fixed; /* Change to fixed to keep it in the same spot when scrolling */
-    top: 20px; /* Distance from the top */
+    top: 41px; /* Distance from the top */
     left: 20px; /* Distance from the left */
-    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
-    overflow-y: auto; /* Enable vertical scrolling */
+    background-color: #444343; /* Button color */
     color: white; /* Text color */
     padding: 10px 15px; /* Button padding */
     border: none; /* No border */
@@ -175,10 +174,11 @@ button:hover {
 }
 
 .back-button:hover {
-    background: linear-gradient(to bottom, #0956b9, #ffffff); /* White to blue gradient */
-    overflow-y: auto; /* Enable vertical scrolling */
+    background-color: #03274e; /* Darker green on hover */
     transform: scale(1.05); /* Slightly grow button on hover */
 }
+
+
 
 /* Footer styles */
 footer {
